@@ -1,0 +1,3 @@
+pkgconfigdir   = $(prefix)/lib/pkgconfig
+pkgconfig_DATA = freealut.pc
+bin_SCRIPTS    = freealut-config
